--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Build and push Docker image
     - uses: docker/build-push-action@v5
-             run: |
+    - run: |  
                TAG=prod
                docker build -t $REGISTRY/$IMAGE_NAME:$TAG .
                docker push $REGISTRY/$IMAGE_NAME:$TAG
