--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,6 +20,5 @@ jobs:
           password: ${{ secrets.ACR_PASSWORD }}
     
     - run: |
-          docker build -t moodleapp.azurecr.io/moodle-appservice .
-          docker tag moodle-appservice moodleapp.azurecr.io/moodle-appservice
+          docker build -t moodleapp.azurecr.io/moodle-appservice:latest .
           docker push moodleapp.azurecr.io/moodle-appservice
