--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,24 +2,43 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "development" ]
     
 jobs:
-
-  build:
-
+  dev:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
 
+    - name: Checkout to development branch
+      run: git checkout development
+
     - uses: azure/docker-login@v2
       with:
-          login-server: moodleapp.azurecr.io
-          username: ${{ secrets.ACR_USERNAME }}
-          password: ${{ secrets.ACR_PASSWORD }}
+        login-server: moodleapp.azurecr.io
+        username: ${{ secrets.ACR_USERNAME }}
+        password: ${{ secrets.ACR_PASSWORD }}
     
     - run: |
         version=$(git rev-parse --short HEAD)
         docker build -t moodleapp.azurecr.io/moodle-appservice:development-$version .
         docker push moodleapp.azurecr.io/moodle-appservice:development-$version
+
+  main:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Checkout to main branch
+      run: git checkout main
+
+    - uses: azure/docker-login@v2
+      with:
+        login-server: moodleapp.azurecr.io
+        username: ${{ secrets.ACR_USERNAME }}
+        password: ${{ secrets.ACR_PASSWORD }}
+    
+    - run: |
+        version=$(git rev-parse --short HEAD)
+        docker build -t moodleapp.azurecr.io/moodle-appservice:production-$version .
+        docker push moodleapp.azurecr.io/moodle-appservice:production-$version
+
