--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,8 +24,8 @@ jobs:
     
     - run: |
         version=$(git rev-parse --short HEAD)
-        docker build -t moodleapp.azurecr.io/moodle-appservice:development-$version .
-        docker push moodleapp.azurecr.io/moodle-appservice:development-$version
+        docker build -t moodleapp.azurecr.io/moodle-appservice:development .
+        docker push moodleapp.azurecr.io/moodle-appservice:development
 
   production:
     runs-on: ubuntu-latest
@@ -42,6 +42,6 @@ jobs:
     
     - run: |
         version=$(git rev-parse --short HEAD)
-        docker build -t moodleapp.azurecr.io/moodle-appservice:production-$version .
-        docker push moodleapp.azurecr.io/moodle-appservice:production-$version
+        docker build -t moodleapp.azurecr.io/moodle-appservice:production .
+        docker push moodleapp.azurecr.io/moodle-appservice:production
 
