--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -19,5 +19,5 @@ jobs:
     
     - run: |
         version=$(git rev-parse --short HEAD)
-        docker build -t moodleapp.azurecr.io/moodle-appservice:development-$version .
-        docker push moodleapp.azurecr.io/moodle-appservice:development-$version
+        docker build -t moodleapp.azurecr.io/moodle-appservice:development .
+        docker push moodleapp.azurecr.io/moodle-appservice:development
