chore: Update development.yml to rename job from 'dev' to 'development'

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "development" ]    
 jobs:
-  dev:
+  development:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
