--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -19,6 +19,6 @@ jobs:
     
     - run: |
         version=$(git rev-parse --short HEAD)
-        docker build -t moodleapp.azurecr.io/moodle-appservice:production-$version .
-        docker push moodleapp.azurecr.io/moodle-appservice:production-$version
+        docker build -t moodleapp.azurecr.io/moodle-appservice:production .
+        docker push moodleapp.azurecr.io/moodle-appservice:production
 
