--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -2,22 +2,21 @@ name: Development
 
 on:
   push:
-    branches: [ "development" ]    
+    branches: "development"    
+  workflow_dispatch:
 jobs:
-  dev:
+  build-dev:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - name: Checkout to development branch
       run: git checkout development
-
     - uses: azure/docker-login@v2
       with:
         login-server: moodleapp.azurecr.io
         username: ${{ secrets.ACR_USERNAME }}
         password: ${{ secrets.ACR_PASSWORD }}
-    
     - run: |
         version=$(git rev-parse --short HEAD)
-        docker build -t moodleapp.azurecr.io/moodle-appservice:development .
-        docker push moodleapp.azurecr.io/moodle-appservice:development
+        docker build -t moodleapp.azurecr.io/moodle-appservice:development-$version .
+        docker push moodleapp.azurecr.io/moodle-appservice:development-$version
