--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -9,8 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Checkout to development branch
-      run: git checkout development
+      with:
+        ref: development
     - uses: azure/docker-login@v2
       with:
         login-server: moodleapp.azurecr.io
@@ -23,13 +23,10 @@ jobs:
 
   deploy:
       runs-on: ubuntu-latest
-      
       needs: build-dev
-      
       environment:
             name: 'development'
             url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-      
       steps:
             - name: Lowercase the repo name
               run: echo "REPO=${https://github.com/xcorpo/moodle-appservice}" >>${GITHUB_ENV}
