--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -21,7 +21,7 @@ jobs:
         docker build -t moodleapp.azurecr.io/moodle-appservice:development .
         docker push moodleapp.azurecr.io/moodle-appservice:development
 
-  deploy:
+  deploy-dev:
       runs-on: ubuntu-latest
       needs: build-dev
       environment:
