--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -21,20 +21,19 @@ jobs:
         docker build -t moodleapp.azurecr.io/moodle-appservice:development .
         docker push moodleapp.azurecr.io/moodle-appservice:development
 
-  deploy-dev:
+  deploy:
       runs-on: ubuntu-latest
       needs: build-dev
       environment:
-            name: 'development'
-            url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+        name: 'stage'
+        url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
       steps:
-            - name: Lowercase the repo name
-              run: echo "REPO=${https://github.com/xcorpo/moodle-appservice}" >>${GITHUB_ENV}
-      
-            - name: Deploy to Azure Web App
-              id: deploy-to-webapp
-              uses: azure/webapps-deploy@85270a1854658d167ab239bce43949edb336fa7c
-              with:
-                app-name: ${{ env.AZURE_WEBAPP_NAME }}
-                publish-profile: ${{ secrets.DEV_STAGING_PROFILE }}
-                images: 'ghcr.io/${{ env.REPO }}:${{ github.sha }}'
+        - name: Deploy to Azure Web App
+          id: deploy-to-webapp
+          uses: azure/webapps-deploy@v2
+          with:
+            app-name: 'moodleenfra(stage)'
+            slot-name: 'stage'
+            publish-profile: ${{ secrets.DEV_STAGING_PROFILE }}
+            images: 'moodleapp.azurecr.io/moodle-appservice:${{ github.sha }}'
