--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -24,6 +24,10 @@ jobs:
   deploy:
       runs-on: ubuntu-latest
       needs: build-dev
+      environment:
+        name: 'stage'
+        url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
       steps:
         - name: Deploy to Azure Web App
           id: deploy-to-webapp
