--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -18,8 +18,8 @@ jobs:
         password: ${{ secrets.ACR_PASSWORD }}
     - run: |
         version=$(git rev-parse --short HEAD)
-        docker build -t moodleapp.azurecr.io/moodle-appservice:development .
-        docker push moodleapp.azurecr.io/moodle-appservice:development
+        docker build -t moodleapp.azurecr.io/moodle-appservice:development-$version .
+        docker push moodleapp.azurecr.io/moodle-appservice:development-$version
 
   deploy:
       runs-on: ubuntu-latest
