--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -25,7 +25,7 @@ jobs:
       runs-on: ubuntu-latest
       needs: build-dev
       environment:
-        name: 'stage'
+        name: 'stage (moodleenfra/stage)'
         url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
       steps:
