--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -25,7 +25,7 @@ jobs:
       runs-on: ubuntu-latest
       needs: build-dev
       environment:
-        name: 'moodleenfra'
+        name: 'stage'
         url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
       steps:
@@ -33,7 +33,7 @@ jobs:
           id: deploy-to-webapp
           uses: azure/webapps-deploy@v2
           with:
-            app-name: 'moodleenfra(stage)'
-            slot-name: 'stage'
+            app-name: 'stage'
+            slot-name: 'moodleenfra/stage'
             publish-profile: ${{ secrets.DEV_STAGING_PROFILE }}
             images: 'moodleapp.azurecr.io/moodle-appservice:${{ github.sha }}'
