--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -22,18 +22,19 @@ jobs:
         docker push moodleapp.azurecr.io/moodle-appservice:development-$version
 
   deploy:
-      runs-on: ubuntu-latest
-      needs: build-dev
-      environment:
-        name: 'stage'
-        url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-      steps:
-        - name: Deploy to Azure Web App
-          id: deploy-to-webapp
-          uses: azure/webapps-deploy@v2
-          with:
-            app-name: 'stage'
-            slot-name: 'moodleenfra/stage'
-            publish-profile: ${{ secrets.DEV_STAGING_PROFILE }}
-            images: 'moodleapp.azurecr.io/moodle-appservice:${{ github.sha }}'
+        runs-on: ubuntu-latest
+        needs: build-dev
+        environment:
+                name: 'development'
+                url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+        steps:
+                - name: Lowercase the repo name
+                  run: echo "REPO=${https://github.com/xcorpo/moodle-appservice}" >>${GITHUB_ENV}
+          
+                - name: Deploy to Azure Web App
+                  id: deploy-to-webapp
+                  uses: azure/webapps-deploy@85270a1854658d167ab239bce43949edb336fa7c
+                  with:
+                    app-name: ${{ env.AZURE_WEBAPP_NAME }}
+                    publish-profile: ${{ secrets.DEV_STAGING_PROFILE }}
+                    images: 'moodleapp/${{ env.REPO }}:${{ github.sha }}'
