--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -33,8 +33,8 @@ jobs:
           
                 - name: Deploy to Azure Web App
                   id: deploy-to-webapp
-                  uses: azure/webapps-deploy@85270a1854658d167ab239bce43949edb336fa7c
+                  uses: azure/webapps-deploy@v2
                   with:
                     app-name: ${{ env.AZURE_WEBAPP_NAME }}
                     publish-profile: ${{ secrets.DEV_STAGING_PROFILE }}
-                    images: 'moodleapp/${{ env.REPO }}:${{ github.sha }}'
+                    images: 'moodleapp.azurecr.io/moodle-appservice/${{ github.sha }}'
