--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -37,4 +37,4 @@ jobs:
                   with:
                     app-name: ${{ env.AZURE_WEBAPP_NAME }}
                     publish-profile: ${{ secrets.DEV_STAGING_PROFILE }}
-                    images: 'moodleapp.azurecr.io/moodle-appservice:development-$version'
+                    images: 'moodleapp.azurecr.io/moodle-appservice:${{ github.sha }}'
