--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -2,7 +2,8 @@ name: Production
 
 on:
   pull_request:
-    branches: [ "production" ]    
+    branches: "production"
+  workflow_dispatch:     
 jobs:
   build-prod:
     runs-on: ubuntu-latest
@@ -17,7 +18,23 @@ jobs:
         username: ${{ secrets.ACR_USERNAME }}
         password: ${{ secrets.ACR_PASSWORD }}
     - run: |
-        version=$(git rev-parse --short HEAD)
-        docker build -t moodleapp.azurecr.io/moodle-appservice:production .
-        docker push moodleapp.azurecr.io/moodle-appservice:production
+        docker build -t moodleapp.azurecr.io/moodle-appservice:production-${{ github.sha }} .
+        docker push moodleapp.azurecr.io/moodle-appservice:production-${{ github.sha }}
 
+deploy:
+        runs-on: ubuntu-latest
+        needs: build-prod
+        environment:
+                name: 'production'
+                url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+        steps:
+                - name: Lowercase the repo name
+                  run: echo "REPO=${https://github.com/xcorpo/moodle-appservice}" >>${GITHUB_ENV}
+          
+                - name: Deploy to Azure Web App
+                  id: deploy-to-webapp
+                  uses: azure/webapps-deploy@v2
+                  with:
+                    app-name: ${{ env.AZURE_WEBAPP_NAME }}
+                    publish-profile: ${{ secrets.PROD_PROFILE }}
+                    images: 'moodleapp.azurecr.io/moodle-appservice:production-${{ github.sha }}'
